Build server swap utility
In progress, currently swaps "You" server side.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "defaultLanguage": "en-US"
   },
   "scripts": {
-    "build": "fitbit-build",
-    "debug": "fitbit"
+    "build": "fitbit-build"
   }
 }
